Complete SCRUM-8 service tests and SCRUM-22 improvements